--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <div id="modal"></div>
+
     <div id="root">
       not rendered yet..
     </div>
